modif page par tl

--- a/page1.html
+++ b/page1.html
@@ -1,6 +1,6 @@
 ﻿<!DOCTYPE html>
 <meta name="keywords" content="HTML">
-<meta name="author" content="Antoine Cuttitta">
+<meta name="author" content="A MOI, MOII, MOIIIII">
 <html>
 
 <head>
