modif index.html par tl

--- a/page1.html
+++ b/page1.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="dk">
 	<meta name="keywords" content="avion, aviation, hisoire">
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<link rel="stylesheet" type="text/css" href="css/style2.css">
 </head>
 
 <body>
