rajout ligne par tl sur page html

--- a/page1.html
+++ b/page1.html
@@ -8,6 +8,7 @@
 	<meta name="author" content="dk">
 	<meta name="keywords" content="avion, aviation, hisoire">
 	<link rel="stylesheet" type="text/css" href="styles.css">
+	<div id="title">Utilisation de la page "Traversées" pour l'AP versionning</div>
 </head>
 
 <body>
