--- a/page1.html
+++ b/page1.html
@@ -8,10 +8,10 @@
 	<meta name="author" content="dk">
 	<meta name="keywords" content="avion, aviation, hisoire">
 	<link rel="stylesheet" type="text/css" href="styles.css">
-	<div id="title">Utilisation de la page "Traversées" pour l'AP versionning</div>
+	<div id="title">Utilisation de la page "Histoire de l'aviation" pour l'AP versionning</div>
 </head>
 
-<body>
+<body> 
 	<span>L'histoire de l'aviation</span>
 	<a id="top"></a>
 	<em>(L'entre-deux-guerre 1918-1939)</em>
