modif pour future merge to main main

--- a/page1.html
+++ b/page1.html
@@ -9,6 +9,7 @@
 	<meta name="keywords" content="avion, aviation, hisoire">
 	<link rel="stylesheet" type="text/css" href="styles.css">
 	<link rel="stylesheet" type="text/css" href="css/style2.css">
+	<div id="title">Utilisation du projet Histoire de l'aviation pour l'AP versionning</div>
 </head>
 
 <body>
