--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-	<title>Histoire de l'aviation</title>
+	<title>Programmer 1</title>
 	<meta name="author" content="dk">
 	<meta name="keywords" content="avion, aviation, hisoire">
 	<link rel="stylesheet" type="text/css" href="styles.css">
@@ -13,7 +13,7 @@
 
 </head>
 
-<body> 
+<body>
 	<span>L'histoire de l'aviation</span>
 	<a id="top"></a>
 	<em>(L'entre-deux-guerre 1918-1939)</em>
