--- a/page1.html
+++ b/page1.html
@@ -5,7 +5,7 @@
 <html>
 
 <head>
-	<title>Histoire de l'aviation</title>
+	<title>Programmeur 2</title>
 	<meta name="author" content="dk">
 	<meta name="keywords" content="avion, aviation, hisoire">
 	<link rel="stylesheet" type="text/css" href="styles.css">
